--- a/styles.css
+++ b/styles.css
@@ -289,6 +289,7 @@ h2 {
   height: 35px;
   margin-bottom: 20px;
   align-self: flex-end;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 767px) {
