--- a/styles.css
+++ b/styles.css
@@ -229,7 +229,7 @@ gap: 50px;
 width: 30%; 
 }
 
-#tic-tac-toe {
+#spellbook, #etchy {
 flex-direction: row-reverse;
 }
 
@@ -349,7 +349,7 @@ h1 {
   width: 100%; 
 }
 
-#tic-tac-toe {
+#spellbook, #etchy {
   flex-direction: column;
 }
 
