--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,7 @@ transition: max-height 0.5s ease;
 }
 
 .content.visible {
-max-height: 3000px; 
+max-height: 5000px; 
 }
 
 .close-arrow { 
@@ -353,7 +353,7 @@ h1 {
   gap: 50px;
 }
 
-.portfolio-container a {
+.portfolio-container a, #api-gif {
   width: 100%; 
 }
 
