Update portfilio and about text

--- a/styles.css
+++ b/styles.css
@@ -178,6 +178,13 @@ margin-top: 25px;
 
 .image-container {
 position: relative;
+display: flex;
+flex-direction: column;
+align-items: center; 
+}
+
+.image-container.vue {
+  justify-content: center; 
 }
 
 .image-container img {
@@ -185,6 +192,11 @@ margin: 25px 10px;
 width: 75px;
 height: 75px;
 transition: transform 0.5s ease; 
+}
+
+.image-container.vue img {
+  width: 65px;
+  height: 55px;
 }
 
 .image-container p {
